[css-contain] Make size containment elements monolithic

Spec text (https://drafts.csswg.org/css-contain/#containment-size):
  "2. Elements with size containment are monolithic."

This patch updates LayoutBox::GetPaginationBreakability()
to check if the element has size containment.

BUG=855263
TEST=external/wpt/css/css-contain/contain-size-breaks-001.html
TEST=external/wpt/css/css-contain/contain-size-monolithic-001.html

Change-Id: I372888eec2e3ab7ca51ad9c9b397ea6b8c89b629
Reviewed-on: https://chromium-review.googlesource.com/1256566
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Manuel Rego <rego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#595782}