third_party/blink/renderer/core/layout/layout_box.cc
@@ -5406,7 +5406,8 @@ LayoutBox::PaginationBreakability LayoutBox::GetPaginationBreakability() const {
   if (IsAtomicInlineLevel() || HasUnsplittableScrollingOverflow() ||
       (Parent() && IsWritingModeRoot()) ||
       (IsOutOfFlowPositioned() &&
-       StyleRef().GetPosition() == EPosition::kFixed))
+       StyleRef().GetPosition() == EPosition::kFixed) ||
+      ShouldApplySizeContainment())
     return kForbidBreaks;
 
   EBreakInside break_value = BreakInside();
